Fix spacing problem with player form

--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ h1 {
 
 h2 { 
 	color: white;
-	font-size: 18px;;
+	font-size: .93em;
 	font-weight: 300;
 	margin: 0;
     text-align: center;
@@ -50,17 +50,16 @@ h2 {
 }
 
 h5{
-	color: gray;
-	font-size: 21px;
+	color: #404041;
+	font-size: 18px;
 	font-weight: 700;
 	height: 25px;
-	margin-top: -10px;
-
+	margin-top: 6px;
 }
 
 p {
 	color: gray;
-	font-size: 16px;
+	font-size: 15px;
 	font-weight: 300;
 }
 
@@ -69,9 +68,6 @@ form {
 	height: 3vw;
 }
 
-#set-range input {
-	width: 130%;
-}
 
 /* This is the main area, these settings tell section right & left to center */
 main {
@@ -106,11 +102,11 @@ main {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	height: 180px;
+	height: 150px;
 }
 
 #set-range header {
-	height: 40px;
+	/*height: 40px;*/
 	width: 95%;
 	justify-content: flex-start;
 	display: flex;
@@ -122,7 +118,7 @@ main {
 	display: flex;
 	justify-content: space-between;
 	flex-direction: row;
-	height: 80px;
+	/*height: 80px;*/
 	width: 95%;
 	margin-top: 30px;
 }
@@ -132,8 +128,12 @@ main {
 	flex-direction: row;
 	justify-content: space-between;
 	width: 100%;
-	height: 60px;
+	height: 45px;
 	align-items: flex-end;
+}
+
+#set-range input {
+	width: 130%;
 }
 
 /* Current Range section */
@@ -141,7 +141,7 @@ main {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	height: 380px
+	height: 300px
 }
 
 #current-range p,
@@ -173,7 +173,8 @@ main {
 	font-size: 16px;
 	font-weight: 700;
 	border-radius: 20px;
-	margin: 7px;
+	margin: 10px;
+	margin-top: 30px;
 }
 
 .updateRange {
@@ -190,6 +191,15 @@ input {
 	height: 35px;
 	border: solid 2px lightgray;
 	border-radius: 2px;
+}
+
+#input-name-one {
+	width: 130%;
+	margin-left: 10px;
+}
+
+#input-guess-one {
+
 }
 
 /* These are general settings for all of the article cards on the right & left side */
@@ -337,6 +347,11 @@ article {
 
 .main-score-right {
 	border-left: solid 1px lightgray;
+}
+
+.minUser,
+.maxUser {
+	color: #404041;
 }
 
 button:hover,
